<resources>
    <string name="app_name">Wally</string>
    <string name="best_of_the_month">Best of the month</string>
    <string name="color_tone">Color tone</string>
    <string name="search_desc">Looking for high quality free Wallpapers?</string>
    <string name="search_hint">Find Wallpapers...</string>
    <string name="categories">Categories</string>
    <string name="loading_text">Something great is loading, please wait for a little!</string>
    <string name="search_empty">You left the search box empty</string>
</resources>