<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_190sdp"
                android:src="@drawable/img_search_bg"
                android:scaleType="centerCrop">

            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/search_desc"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/sfprotextbold"
                    android:textSize="@dimen/_18sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/btn_rounded_white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editTextSearch"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@null"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:textColor="@color/textColorPrimary"
                            android:hint="@string/search_hint"
                            android:fontFamily="@font/sfprotextregular"
                            android:textColorHint="@color/textColorSecond"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_search"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background="@drawable/btn_accent_half_right"
                        android:padding="@dimen/_4sdp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingEnd="@dimen/_10sdp"
                            android:paddingStart="@dimen/_10sdp"
                            app:srcCompat="@drawable/ic_search"
                            app:tint="@color/colorWhite"
                            tools:ignore="VectorDrawableCompat" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/loadingContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:background="@drawable/btn_white_half_top"
            android:layout_marginTop="@dimen/_minus10sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_minus25sdp"
                    android:layout_gravity="center"
                    android:text="@string/loading_text"
                    android:gravity="center"
                    android:textColor="@color/textColorPrimary"
                    android:fontFamily="@font/sfprotextbold"
                    android:textSize="@dimen/_16sdp" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationHome"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_60sdp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/loading_file" />

            </LinearLayout>

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_white_half_top"
            android:layout_marginTop="@dimen/_minus10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/searchContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_30sdp"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_3sdp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:layout_gravity="center_vertical"
                                android:text="@string/best_of_the_month"
                                android:textColor="@color/textColorPrimary"
                                android:fontFamily="@font/sfprotextbold"
                                android:textSize="@dimen/_14sdp"
                                />

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvSearchResults"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/homeDataContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/popularContainer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_30sdp"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_3sdp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:layout_gravity="center_vertical"
                                android:text="@string/best_of_the_month"
                                android:textColor="@color/textColorPrimary"
                                android:fontFamily="@font/sfprotextbold"
                                android:textSize="@dimen/_14sdp"
                                />

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvPopular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/colorToneContainer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_30sdp"
                            android:paddingStart="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:layout_gravity="center_vertical"
                                android:text="@string/color_tone"
                                android:textColor="@color/textColorPrimary"
                                android:fontFamily="@font/sfprotextbold"
                                android:textSize="@dimen/_14sdp"
                                />

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/categoriesContainer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_30sdp"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:layout_gravity="center_vertical"
                                android:text="@string/categories"
                                android:textColor="@color/textColorPrimary"
                                android:fontFamily="@font/sfprotextbold"
                                android:textSize="@dimen/_14sdp"
                                />

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvCategories"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</RelativeLayout>